// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`heading.md with options: {"type":{"text":false}}: heading.md 1`] = `
# abc123

# 我1我a


## abc123

## 我1我a


### abc123

### 我1我a


#### abc123

#### 我1我a


##### abc123

##### 我1我a


###### abc123

###### 我1我a



~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# abc123

# 我1我a

## abc123

## 我1我a

### abc123

### 我1我a

#### abc123

#### 我1我a

##### abc123

##### 我1我a

###### abc123

###### 我1我a

`;

exports[`heading.md with options: undefined: heading.md 1`] = `
# abc123

# 我1我a


## abc123

## 我1我a


### abc123

### 我1我a


#### abc123

#### 我1我a


##### abc123

##### 我1我a


###### abc123

###### 我1我a



~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# abc123

# 我 1 我 a

## abc123

## 我 1 我 a

### abc123

### 我 1 我 a

#### abc123

#### 我 1 我 a

##### abc123

##### 我 1 我 a

###### abc123

###### 我 1 我 a

`;
